[metadata]
name = dslibs
version = 0.0.9
author = Chris J. Kepinsky
author_email = chris.kepinski@gmail.com
description = data science related tools & helpers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjkepinsky/libs
project_urls =
    Bug Tracker = https://github.com/cjkepinsky/libs/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src